# CTViewer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  todo.md
data/: null_sprite.psd  scene_debug_sprites.psd  scene_debug_tiles.psd  snes_na_scenes.txt  world_debug_tiles.psd
docs/: glossary.md  index.md  strings.md
docs/data/: palettes.md  strings.md  tilesets.md
docs/scene_scripts/: 04_sprite_animation.md  actor_movement.md  dialogue.md  execution_flow.md  memory_areas.md  script_execution_flow.md  sprite_animation.md
docs/scenes/: palettes.md  tilesets.md
docs/world_scripts/: action_functions.md  actor_data.md  executor_functions.md  index.md  script_ops.md  sprite_animation.md
docs/worlds/: exits.md  exits_triggers.md  graphics.md  index.md  map_data.md  strings.md  triggers.md
src/: actor.rs  assets.rs  camera.rs  character.rs  destination.rs  facing.rs  game_palette.rs  input.rs  items.rs  l10n.rs  main.rs  map.rs  map_renderer.rs  memory.rs  music_list.rs  next_destination.rs  palette_anim.rs  party.rs  renderer.rs  screen_fade.rs  scroll_state.rs  shared_op.rs  sound_list.rs  text_processor.rs  tileset.rs  ui_theme.rs
src/filesystem/: backend.rs  backend_pc.rs  backend_snes.rs  filesystem.rs  maps.rs  mod.rs  palette.rs  resourcesbin.rs  scene.rs  sprite.rs  strings.rs  text_decoder.rs  tileset.rs  ui.rs  world.rs
src/gamestate/: gamestate.rs  gamestate_scene.rs  gamestate_world.rs  mod.rs
src/party/: character.rs  items.rs  mod.rs  party.rs
src/scene/: actor.rs  mod.rs  op_inventory.rs  ops.rs  ops_actor_props.rs  ops_animation.rs  scene.rs  (+20 more)
(+101 files in other folders)
