[package]
name = "ctviewer"
version = "0.2.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bitflags = "2.9.4"
png = "0.18.0"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.2"

[dependencies.sdl3]
version = "0.15.1"
default-features = false
features = ["ttf", "unsafe_textures"]

[profile.release]
strip = true
#trim-paths = true
panic = "abort"
